# cuda-gemm

./: .gitignore  CMakeLists.txt  README.md  draw_plot.py
assets/: block_thread_tiled_gemm.excalidraw  block_tiled_gemm.excalidraw
docs/: tiling_diagram.py
include/: block_thread_tiled_gemm.cuh  block_thread_tiled_vector_load_gemm.cuh  block_tiled_gemm.cuh  block_warp_thread_tiled_vector_load_gemm.cuh  cublas_sgemm.cuh  error_handler.h  naive_gemm.cuh
src/: block_thread_tiled_gemm.cu  block_thread_tiled_vector_load_gemm.cu  block_tiled_gemm.cu  block_warp_thread_tiled_vector_load_gemm.cu  cublas_sgemm.cu  main.cu  naive_gemm.cu
